# gear_spline_io

./: CMakeLists.txt  package.xml
config/: lio_eee03.yaml  lio_livox.yaml  lio_ouster.yaml
include/gear_spline/: Association.hpp  Estimator.hpp  GearSystem.hpp  SplineState.hpp
include/gear_spline/utils/: common_utils.h
launch/: run_livox.launch  run_ouster.launch
scripts/: evaluate_trajectory.py
src/: gear_spline_lio_node.cpp
test/: test_rosbag_offline.cpp  test_simulator.cpp  test_spline.cpp
