<?xml version="1.0"?>
<package format="2">
  <name>gear_spline_lio</name>
  <version>0.1.0</version>
  <description>Gear-Spline LIO: B-spline trajectory with dynamic gear switching</description>

  <maintainer email="dev@example.com">Developer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>
  <depend>livox_ros_driver</depend>
  <depend>rosbag</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>
</package>
